<resources>
    <string name="app_name">Motivation</string>
    <string name="nova_frase">Nova Frase</string>
    <string name="motivation">Motivation</string>
    <string name="title_activity_user">Motivation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vamos_come_ar">Vamos começar?</string>
    <string name="qual_seu_nome">Qual seu nome?</string>
    <string name="salvar">Salvar</string>
    <string name="ol_kotlin">Olá Kotlin.</string>
</resources>