<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserActivity"
    android:background="@color/purple_200"
    android:padding="16sp">

    <TextView
        android:layout_marginTop="32sp"
        android:id="@+id/text_comecar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vamos_come_ar"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints="username"
        android:hint="@string/qual_seu_nome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="32sp"
        android:text="@string/salvar"
        android:textColor="@color/black" />


</RelativeLayout>